# activiti-cloud-api/activiti-cloud-api-process-model-impl/src/main/java/org/activiti/cloud/api/process/model/impl/CloudIntegrationContextImpl.java
@@ -24,6 +24,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import org.activiti.api.process.model.ExternalizedContextReference;
 import org.activiti.cloud.api.model.shared.impl.CloudRuntimeEntityImpl;
 import org.activiti.cloud.api.process.model.CloudIntegrationContext;
 
@@ -53,6 +54,7 @@ public class CloudIntegrationContextImpl extends CloudRuntimeEntityImpl implemen
     private Map<String, Object> inBoundVariables = new HashMap<>();
     private Map<String, Object> outBoundVariables = new HashMap<>();
     private Boolean ephemeralVariables;
+    private ExternalizedContextReference externalizedContextReference;
 
     public CloudIntegrationContextImpl() {}
 
@@ -316,6 +318,15 @@ public class CloudIntegrationContextImpl extends CloudRuntimeEntityImpl implemen
     }
 
     @Override
+    public ExternalizedContextReference getExternalizedContextReference() {
+        return externalizedContextReference;
+    }
+
+    public void setExternalizedContextReference(ExternalizedContextReference externalizedContextReference) {
+        this.externalizedContextReference = externalizedContextReference;
+    }
+
+    @Override
     public int hashCode() {
         final int prime = 31;
         int result = super.hashCode();
@@ -345,7 +356,8 @@ public class CloudIntegrationContextImpl extends CloudRuntimeEntityImpl implemen
                 resultDate,
                 stackTraceElements,
                 status,
-                ephemeralVariables
+                ephemeralVariables,
+                externalizedContextReference
             );
         return result;
     }
@@ -386,7 +398,8 @@ public class CloudIntegrationContextImpl extends CloudRuntimeEntityImpl implemen
             Objects.equals(resultDate, other.resultDate) &&
             Objects.equals(stackTraceElements, other.stackTraceElements) &&
             status == other.status &&
-            Objects.equals(ephemeralVariables, other.ephemeralVariables)
+            Objects.equals(ephemeralVariables, other.ephemeralVariables) &&
+            Objects.equals(externalizedContextReference, other.externalizedContextReference)
         );
     }
 
@@ -443,6 +456,8 @@ public class CloudIntegrationContextImpl extends CloudRuntimeEntityImpl implemen
             .append(outBoundVariables != null ? toString(outBoundVariables.entrySet(), maxLen) : null)
             .append(", ephemeralVariables=")
             .append(ephemeralVariables)
+            .append(", externalizedContextReference=")
+            .append(externalizedContextReference)
             .append("]");
         return builder.toString();
     }
