# activiti-cloud-query-service/activiti-cloud-services-query/activiti-cloud-services-query-events/src/main/java/org/activiti/cloud/services/query/events/handlers/BaseIntegrationEventHandler.java
@@ -17,8 +17,10 @@ package org.activiti.cloud.services.query.events.handlers;
 
 import jakarta.persistence.EntityManager;
 import java.util.Optional;
+import org.activiti.api.process.model.ExternalizedContextReference;
 import org.activiti.api.process.model.IntegrationContext;
 import org.activiti.cloud.api.process.model.events.CloudIntegrationEvent;
+import org.activiti.cloud.services.query.model.ExternalizedContextReferenceEmbeddable;
 import org.activiti.cloud.services.query.model.IntegrationContextEntity;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -68,7 +70,16 @@ public abstract class BaseIntegrationEventHandler {
         entity.setProcessDefinitionVersion(integrationContext.getProcessDefinitionVersion());
         entity.setBusinessKey(integrationContext.getBusinessKey());
         entity.setInBoundVariables(integrationContext.getInBoundVariables());
+        entity.setExternalizedContextReference(toEmbeddable(integrationContext.getExternalizedContextReference()));
 
         return entity;
+    }
+
+    protected static ExternalizedContextReferenceEmbeddable toEmbeddable(
+        ExternalizedContextReference externalizedContextReference
+    ) {
+        return externalizedContextReference != null
+            ? new ExternalizedContextReferenceEmbeddable(externalizedContextReference)
+            : null;
     }
 }
